stylesheets/style.css
body {
    height: 100vh;
    margin: 0;
    padding: 0;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: left top;
    background-image: url("https://images.unsplash.com/photo-1552083375-1447ce886485?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
}

#indexTextHolder {
    float: right;
    margin-top: 10%;
    margin-right: 10%;
    width: 200px;
}

#indexInput {
    outline: none;
    height: 30px;
    font-size: 17px;
    width: 144px;
    padding: 0px;
    position: absolute;
    border-color: gray;
    border-radius: 15px;
    border-width: 0px;
    padding-left: 31px;
    padding-right: 5px;
    transition: all 0.3s ease;
}

#overlappingDivInput {
    height: 30px;
    width: 30px;
    background-color: #00c5e5;
    pointer-events: none;
    opacity: 100%;
    border-color: transparent;
    border-radius: 15px;
    border-width: 0px;
    position: relative;
    transition: all 0.3s ease;
    cursor: pointer;
    display: flex;
}
#overlappingDivInput:hover {
    background-color: #00b0e5;
}

#enterText {
    color: black;
    text-shadow: 0 0 4px white;
    opacity: 0%;
    text-align: center;
    font-size: 18px;
    margin: auto;
    user-select: none;
}

.menuImg {
    float: right;
    width: 75px;
    height: 75px;
    cursor: pointer;
}

#menu {
    float: right;
    height: 100%;
    width: 0px;
    background-color: white;
    opacity: 20%;
    position: fixed;
    top: 0;
    right: 0;
    z-index: -1;
    transition: width 0.3s ease-out;
    overflow-y: scroll;
}

#backgroundMenu {
    float: left;
    height: 100%;
    width: 100%;
    background-color: gray;
    opacity: 0%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: -1;
    transition: width 0.3s ease-out;
}

#closeIcon {
    opacity: 20%;
}

#placeholderMenu {
    height: 20px;
}

.menuItem {
    font-size: 20px;
    border-radius: 0;
    border: solid #00c5e5 2px;
    border-left: 0;
    border-right: 0;
    padding: 10px 0px 10px 15px;
    user-select: none;
    cursor: pointer;
    transition: all 0.2s ease-out;
    margin-bottom: 3px;
}

#menuInfo {
    font-size: 30px;
    font-weight: bold;
    margin-left: 20px;
}

#header {
    font-size: 20px;
    letter-spacing: 0;
    display: flex;
}

p {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

#footerLogo {
    float: left;
    width: 50px;
    height: 50px;
}

#footerText {
    float: left;
    margin: auto 0px auto 10px;
    font-size: 25px;
    text-align: center;
    text-shadow: 0 0 3px white;
}

footer {
    float: left;
    height: 50px;
    margin-left: 30px;
    display: inline;
    position: fixed;
    bottom: 20px;
    display: flex;
}

